<resources>
    <string name="app_name">Snakess</string>
    <string name="login">Логин</string>
    <string name="avtoriz">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="re_password">Повторите пароль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table_record">Таблица рекордов</string>
    <string name="loding">Loding...</string>
    <string name="error_login_passwd_undefined">поля логина и пароля не заполнены</string>
    <string name="error_login_undefined">поле логин не заполненно</string>
    <string name="error_pass_undefined">поле пароль не заполненно</string>
    <string name="kick">kick</string>
    <string name="table_lobby">Подключение игроков</string>
    <string name="kol_player">Количество игроков:</string>
    <string name="new_game">Создание игры</string>
    <string name="txt_numer_player">Назовите игру:</string>
    <string name="error_kol_bolshe_players">Нельзя,чтобы на поле было больше восьми игроков!</string>
    <string name="error_kol_menshe_players">Нельзя, чтобы количество игроков былор меньше 2!</string>
    <string name="error_nameGame">Назовите игру</string>
</resources>
