<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presention.credentials.authorization.AuthorizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/costome_edit_text_bg"
            android:layout_marginBottom="20dp"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/costome_edit_text_bg"
            android:drawableStart="@drawable/ic_star"
            android:hint="@string/password" />
        <TextView
            android:id="@+id/button_text_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="@dimen/online_size"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonAvtor_Reg"
            android:text="@string/avtoriz"
            android:textColor="@color/colorwhite" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cccccccc"
        android:visibility="gone"
        tools:visibility="visible">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    </FrameLayout>
</RelativeLayout>