<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presention.credentials.createplay.CreateGameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_game"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/txt_numer_player"
            android:textSize="@dimen/size_txt_kol_player"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="навание игры"
            android:textSize="@dimen/size_txt_kol_player" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/kol_player"
                android:textSize="@dimen/size_txt_kol_player"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/txt_remuve_player"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_more_or_less_player"
                    android:rotation="-90" />

                <TextView
                    android:id="@+id/window_add_player"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/costome_edit_text_bg"
                    android:gravity="center"
                    android:text="2"
                    android:textSize="@dimen/size_txt_kol_player"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/txt_add_player"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="@drawable/button_more_or_less_player"
                    android:rotation="90" />

            </FrameLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/bottonGame_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_play" />
</LinearLayout>